--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 ul {
     display: flex;
-justify-content: center;
+    justify-content: center;
 }
 
 nav {
@@ -26,11 +26,11 @@ nav li {
 }
 
 nav li a {
- text-decoration: none;
- color: #fff;
- font-family: Arial, Helvetica, sans-serif;
- border: 1px solid #646D7C;
- padding: 10px 30px;
+    text-decoration: none;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid #646D7C;
+    padding: 10px 30px;
 }
 
 nav li a:hover {
@@ -38,25 +38,22 @@ nav li a:hover {
 }
 
 /*Home Section */
+
 section .homepage-img {
     background-image: url(/img/azin-javadzadeh-Ow4ijRO4ZJw-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-width: 100%;
-height: 95vh;
-z-index: -1;
-
+    width: 100%;
+    height: 95vh;
+    z-index: -1;
 }
 
-h1
-{
+h1 {
     font-size: 60px;
     color: #fff;
     position: absolute;
     top: 40%;
     left: 40%;
-    
-    
 }
 
 h3 {
@@ -79,12 +76,12 @@ section #about {
 
 .about-container {
     padding: 100px;
-    }
+}
 
 .about-wrapper {
     width: 100%;
-columns: 3;
-column-gap: 50px;
+    columns: 3;
+    column-gap: 50px;
 }
 
 .about-wrapper .about-box {
@@ -94,9 +91,8 @@ column-gap: 50px;
 
 .about-wrapper .about-box img {
     max-width: 100%;
-    display: block;    
+    display: block;
 }
-
 
 .content {
     padding: 15px;
@@ -106,7 +102,6 @@ column-gap: 50px;
 #about .about-box:nth-child(1) h4 {
     color: #178A27;
 }
-
 
 #about .about-box:nth-child(2) h4 {
     color: #1686C1;
@@ -126,7 +121,6 @@ column-gap: 50px;
 }
 
 .content button {
-
     font-size: 22px;
     display: block;
     margin: 0 auto;
@@ -154,7 +148,6 @@ column-gap: 50px;
     background-color: #852406;
 }
 
-
 .extra-info {
     width: 100%;
     columns: 2;
@@ -170,7 +163,7 @@ column-gap: 50px;
 
 .extra-info .extra-box img {
     max-width: 100%;
-    display: block;    
+    display: block;
 }
 
 .extra-box .content h4 {
@@ -193,7 +186,13 @@ column-gap: 50px;
     transition: none;
 }
 
+/*Service Section */
 
-
-
-
+.service-img {
+    background-image: url(/img/tobias-keller-73F4pKoUkM0-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 60vh;
+    z-index: -1;
+}
