--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ section #about {
 
 
 .service-text {
-    /*display: block;*/
+
     padding-top: 150px;
     color: #fff;
 } 
@@ -240,6 +240,7 @@ section #about {
 }
 
 
+
 .services-wrapper .services-box {
     width: 100%;
     display: inline;
@@ -256,7 +257,9 @@ section #about {
 .services-box .content {
     background-color: #F2F2F2;
     padding: 0 20px 30px 20px;
+    height: 40%;
 }
+
 
 .services-box h3 {
     color: #666666;
@@ -292,11 +295,7 @@ section #about {
 
 .services-big-col .content {
     padding: 0 20px 30px 20px;
-    background-color: #F2F2F2;
-    /*display: inline;
-
-    overflow: hidden;*/
-    
+    background-color: #F2F2F2;    
 }
 
 .services-big-col h3 {
@@ -317,8 +316,81 @@ section #about {
     padding: 10px 25px;
 }
 
+/*Contact*/
+
+.contact-img {
+    background-image: url(/img/sebastian-unrau-9Yz9Us5-D0s-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 95vh;
+}
+
+.contact-text {
+
+ padding-top: 150px;
+ color: #fff;
+}
+
+.contact-text h2 {
+    font-size: 35px;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+.contact-text p {
+    display: block;
+    margin: 0 auto;
+    text-align:center;
+    font-size: 22px;
+    opacity: 0.5;
+    padding: 17px;
+    width: 32em;
+    background-color: #9F9C9B;
+    border-radius: 5px;
+}
+
+.contact-form {
+    /*width:50em;*/
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+input {
+    width: 65%;
+    background-color: #9F9C9B;
+    border-radius: 5px;
+    font-size: 17px;
+    color: black;
+    padding: 5px 0 5px 80px;
+    margin: 5px 80px 5px 5px;
+    opacity: 0.5;
+}
 
 
+
+textarea {
+    background-color: #9F9C9B;
+    opacity: 0.5;
+    font-size: 14px;
+    border-radius: 5px;
+}
+
+::placeholder {
+    color: black;
+}
+
+
+
+input:focus,
+textarea:focus {
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    outline-width: 0;
+}
 
 
 
