--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav li a:hover {
 /*Home Section */
 
 section .homepage-img {
-    background-image: url(/img/azin-javadzadeh-Ow4ijRO4ZJw-unsplash.jpg);
+    background-image: url(/img/jeremy-bishop-tTY4nthc2IY-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -51,17 +51,22 @@ section .homepage-img {
 h1 {
     font-size: 60px;
     color: #fff;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    padding-top: 260px;
+    /*position: absolute;
     top: 40%;
-    left: 40%;
+    left: 40%;*/
 }
 
 #home h3 {
     font-size: 30px;
     color: #fff;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    /*position: absolute;
     top: 55%;
-    left: 37%;
+    left: 37%;*/
 }
 
 section #home {
@@ -349,25 +354,28 @@ section #about {
     width: 32em;
     background-color: #9F9C9B;
     border-radius: 5px;
+    color: #000000;
+    font-weight: bold;
 }
 
 .contact-form {
-    /*width:50em;*/
+   
     padding-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 30px;
 
 }
 
 input {
-    width: 65%;
+    width: 85%;
     background-color: #9F9C9B;
     border-radius: 5px;
     font-size: 17px;
     color: black;
-    padding: 5px 0 5px 80px;
-    margin: 5px 80px 5px 5px;
+    padding: 7px 0 5px 10px;
+    margin: 5px 159px 5px 5px;
     opacity: 0.5;
 }
 
@@ -390,6 +398,23 @@ input:focus,
 textarea:focus {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
     outline-width: 0;
+}
+
+#contact button {
+    display: block;
+    margin: 0 auto;
+    font-size: 20px;
+    background-color: #262628;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    padding: 10px 30px;
+}
+
+#contact button:hover {
+    cursor: pointer;
+    background-color: #fff;
+    color: #262628;
 }
 
 
