--- a/style.css
+++ b/style.css
@@ -3,16 +3,64 @@
     padding: 0;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
+html {
+    box-sizing: border-box;
 }
 
-ul {
+body {
+    font-family: 'Roboto', sans-serif;
     display: flex;
+}
+
+header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+   }
+
+   .navigation {
+       display: flex;
+   }
+
+   .navigation li {
+    justify-content: flex-end
+   }
+
+/*main {
+    flex: 1;
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
-nav {
+header ul {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+li {
+    list-style-type: none;
+    padding: 10px;
+}
+
+ul {
+    margin: 0;
+}
+
+footer {
+    padding: 10px;
+}*/
+
+
+
+
+/*ul li{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    /*justify-content: center;
+}*/
+
+/*nav {
     position: fixed;
     top: 0;
     width: 100%;
@@ -38,9 +86,10 @@ nav li a:hover {
 }
 
 /*Home Section */
-
-section .homepage-img {
+ .homepage-img {
     background-image: url(/img/jeremy-bishop-tTY4nthc2IY-unsplash.jpg);
+    max-width: 100%;
+    max-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -304,6 +353,10 @@ h1 {
 
 /*Contact*/
 
+#contact {
+    padding-bottom: 20px;
+}
+
 .contact-img {
     background-image: url(/img/sebastian-unrau-9Yz9Us5-D0s-unsplash.jpg);
     background-size: cover;
@@ -397,10 +450,25 @@ textarea:focus {
     color: #262628;
 }
 
+footer {
+    text-align: center;
+    font-size: 14px;
+    font-style: italic;
+    padding: 10px;
+    border-top: 1px solid #EEEEEE;
+}
 
 
 
 
 
 
+@media screen and (min-width: 1024px) {
+    nav {
+        width: 50%;
+    }
+   nav ul {
+       width: 50vw;
+   }
+}
 
