--- a/home2.css
+++ b/home2.css
@@ -91,11 +91,93 @@ section#about {
 	height: auto;
  }
 
+
+ .about-wrapper .card,
+ .extra-cards {
+    /*padding: 15px;*/
+    background-color: #F2F2F2;
+}
+
+
+#about .about-wrapper .card:nth-child(1) h4 {
+    color: #178A27;
+}
+
+#about .about-wrapper .card:nth-child(2) h4 {
+    color: #1686C1;
+}
+
+#about .about-wrapper .card:nth-child(3) h4 {
+    color: #8F8F8F;
+}
+
+.about-wrapper .card h4 {
+    font-size: 24px;
+    padding-bottom: 15px;
+}
+
+.about-wrapper .card p {
+    padding-bottom: 20px;
+}
+
+.about-wrapper button {
+    font-size: 22px;
+    display: block;
+    margin: 0 auto;
+    padding: 8px 20px;
+    border-radius: 5px;
+    color: #fff;
+    border: none;
+}
+
+.about-wrapper button:hover {
+    cursor: pointer;
+    opacity: 0.7;
+    transition: 0.3s;
+}
+
+
+#about .about-wrapper .card:nth-child(1) button {
+
+    background-color: #178A27;
+}
+
+#about .about-wrapper .card:nth-child(2) button {
+    background-color: #1686C1;
+}
+
+#about .about-wrapper .card:nth-child(3) button {
+    background-color: #852406;
+}
+
  .extra-cards {
     padding-top: 20px;
     padding-bottom: 20px;
    flex: 0 1 48%;
 }
+
+.extra-cards h4 {
+    color: #666666;
+    text-align: center;
+}
+
+.extra-cards button {
+
+    font-size: 18px;
+    color: #3f3e3e;
+    background-color: #fff;
+    border: 1px solid lightgray;
+    display: flex;
+    border-radius: 7px;
+    padding: 10px 25px;
+}
+
+.extra-cards button:hover {
+    background-color: lightgray;
+    transition: none;
+}
+
+
 
 /*Services*/
 
@@ -103,7 +185,7 @@ section#about {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 85px;
+    /*margin: 85px;*/
  }
 
  .service-card {
@@ -117,11 +199,44 @@ section#about {
 	height: auto;
  }
 
- .extra-col {
+
+
+
+.service-card {
+    background-color: #F2F2F2;
+    height: 40%;
+   
+}
+
+.service-card h3 {
+    color: #666666;
+    padding-top: 10px;
+    text-align: center;
+}
+
+.service-card p {
+    font-size: 17px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.service-card button {
+    font-size: 18px;
+    color: #666666;
+    background-color: #fff;
+    border: 1px solid lightgray;
+    display: block; 
+    margin: 0 auto;
+    border-radius: 7px;
+    padding: 10px 25px;
+}
+
+.extra-col {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding-top: 20px;
+    background-color: #F2F2F2; 
  }
 
 .extra-col img {
@@ -130,6 +245,27 @@ section#about {
 	width: 100%;
 	height: auto;
 }
+
+.extra-col h3,
+.extra-col button {
+    color: #666666;
+}
+
+.extra-col h3 {
+    font-size: 22px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
+.extra-col button {
+    font-size: 18px;
+    background-color: #fff;
+    border: 1px solid lightgray;
+    border-radius: 7px;
+    margin-top: 20px;
+    padding: 10px 25px;
+}
+
 
 
 
