--- a/styling.css
+++ b/styling.css
@@ -136,6 +136,7 @@ section#service {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 85px;
     /*padding: 85px;*/
  }
 
