--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ section#about {
  .extra-cards {
     /*padding: 15px;*/
     background-color: #F2F2F2;
+    padding-bottom: 20px;
 }
 
 
@@ -113,12 +114,15 @@ section#about {
 }
 
 .about-wrapper .card h4 {
+    padding-top: 20px;
+    padding-left: 20px;
     font-size: 24px;
     padding-bottom: 15px;
 }
 
 .about-wrapper .card p {
     padding-bottom: 20px;
+    padding-left: 20px;
 }
 
 .about-wrapper button {
@@ -152,7 +156,7 @@ section#about {
 }
 
  .extra-cards {
-    padding-top: 20px;
+    margin-top: 60px;
     padding-bottom: 20px;
    flex: 0 1 48%;
 }
@@ -236,7 +240,7 @@ section#about {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding-top: 40px;
+    padding-top: 20px;
     background-color: #F2F2F2; 
  }
 
