--- a/style.css
+++ b/style.css
@@ -56,14 +56,14 @@ height: 95vh;
     width: 50%;
 }
 
-.banner-text-items h2 {
-    font-size: 3em;
+.banner-text-items h1 {
+    font-size: 50px;
     margin-bottom: 20px;
     text-transform: uppercase;
 }
 
-.banner-text-items p {
-    font-size: 18px;
+.banner-text-items h2 {
+    font-size: 30px;
 }
 
 
@@ -301,28 +301,35 @@ section#about {
 }
 
 .contact-text h2 {
+    color: #fff;
     font-size: 35px;
     display: flex;
     justify-content: center;
-    padding-bottom: 20px;
+    /*padding-bottom: 20px;*/
+    padding-top: 70px;
 }
 
 .contact-text p {
-    /*display: flex;
-    flex-wrap: wrap;
-    align-items: center;*/
-    font-size: 22px;
+    color: #fff;
+    display: flex;
+    font-size: 25px;
     text-align: center;
-    width: 50em;
-    padding-left: 10px;
+    width: 45em;
+    padding-left: 10rem;
+    padding-top: 2em;
 }
 
 .form-area {
     display: flex;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.5);
     border-radius: 5px;
     padding: 2em;
-    margin: 8em;
+    width: 60%;
+    margin: 5em auto;
+}
+
+::placeholder {
+    color: #fff;
 }
 
 
@@ -360,27 +367,23 @@ section#about {
 }
 
 .details-area button {
-    background: red;
+    background: #262628;
     color: #fff;
-    border: 0;
-    padding: 15px 50px;
-    border-radius: 5px;
+    border: 1px solid #fff;
+    padding: 15px 30px;
+    border-radius: 15px;
     font-size: 16px;
-    text-transform: uppercase;
+    display: block;
+    margin: 0 auto;
+}
+
+.details-area button:hover {
+    cursor: pointer;
+    background-color: #fff;
+    color: #262628; 
 }
 
 
-/*.main-content {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 5% p;
-}
-
-.main1 {
-    flex: 1;
-    padding: 3%;
-    text-align: center;
-}*/
 
 /*Contact*/
 
