--- a/style.css
+++ b/style.css
@@ -12,10 +12,19 @@ height: 95vh;
 }
 
 .top-bar {
-    background-color: #000;
+    /*background-color: #000;
     display: flex;
     width: 100%;
-    height: auto;
+    height: auto;*/
+
+    width: 100%;
+  height: 50px;
+  background-color:red;
+  position: fixed;
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+  display: flex;
+  align-items: center;
+  /*padding-left: 22.5%;*/
 }
 
 
@@ -27,6 +36,7 @@ height: 95vh;
 .menu ul {
     display: flex;
     list-style-type: none;
+    
     margin-top: 30px;
     flex-flow: row wrap;
 }
@@ -36,11 +46,11 @@ height: 95vh;
     text-align: center;
 }
 
-.menu ul li a {
+/*.menu ul li a {
     color: #fff;
     font-size: 20px;
     text-decoration: none;
-}
+}*/
 
 /* Banner */
 
