--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ height: 95vh;
 
     width: 100%;
   height: 50px;
-  background-color:red;
+  background-color: #383E4C;
   position: fixed;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
   display: flex;
   align-items: center;
-  /*padding-left: 22.5%;*/
+  padding: 15px;
 }
 
 
@@ -37,20 +37,28 @@ height: 95vh;
     display: flex;
     list-style-type: none;
     
-    margin-top: 30px;
+    /*margin-top: 30px;*/
     flex-flow: row wrap;
+
+    align-items: center;
+    justify-content: center;
+
+    margin: 20px;
 }
 
 .menu ul li {
-    flex: 1;
-    text-align: center;
+    padding: 25px;
 }
 
-/*.menu ul li a {
+.menu ul li a {
     color: #fff;
-    font-size: 20px;
+    font-size: 23px;
     text-decoration: none;
-}*/
+    border: 1px solid #646D7C;
+    padding: 15px 30px;
+}
+
+
 
 /* Banner */
 
