--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ height: 95vh;
     height: auto;*/
 
     width: 100%;
-  height: 50px;
+  /*height: 50px;
   background-color: #383E4C;
   position: fixed;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
   display: flex;
   align-items: center;
-  padding: 15px;
+  padding: 15px;*/
 }
 
 
