--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ height: 95vh;
     height: auto;*/
 
     width: 100%;
-  /*height: 50px;
+  height: 50px;
   background-color: #383E4C;
   position: fixed;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
   display: flex;
   align-items: center;
-  padding: 15px;*/
+  padding: 15px;
 }
 
 
@@ -40,8 +40,8 @@ height: 95vh;
     /*margin-top: 30px;*/
     flex-flow: row wrap;
 
-    align-items: center;
-    justify-content: center;
+    /*align-items: center;
+    justify-content: center;*/
 
     margin: 20px;
 }
@@ -52,7 +52,7 @@ height: 95vh;
 
 .menu ul li a {
     color: #fff;
-    font-size: 23px;
+    font-size: 18px;
     text-decoration: none;
     border: 1px solid #646D7C;
     padding: 15px 30px;
