--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ height: 95vh;
     font-size: 18px;
     text-decoration: none;
     border: 1px solid #646D7C;
-    padding: 15px 30px;
+    /*padding: 15px 30px;*/
 }
 
 .menu ul li a:hover {
